# ecl

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: eval.rs  parse.rs
src/: bool.rs  builtins.rs  bytecode.rs  dict.rs  err.rs  func.rs  grammar.rs  grammar.rustpeg  lib.rs  lines.rs  list.rs  main.rs  mem.rs  nil.rs  num.rs  serde_lines.rs  str.rs  thunk.rs
tests/: assert.rs  compile.rs  exec.rs  explicit_leak.rs  leak.rs  lines.rs
tests/assert/: basic.ecl  cmp.ecl  dict-cmp.ecl  leak-positive-dict.ecl  leak-positive.ecl  leak.ecl  list-cmp.ecl
tests/exec/: assert-eq-cmp-error.ecl  assert-eq-cmp-error.exec  assert-eq-cmp-error.stderr  assert-eq-error.ecl  assert-eq-error.exec  assert-eq-error.stderr  assert-eq.exec  assert-eq.stderr  assert-fail.exec  assert-fail.stderr  assert-ge.ecl  assert-ge.exec  assert-ge.stderr  assert-gt.ecl  assert-gt.exec  assert-gt.stderr  assert-lazy-fail.ecl  assert-lazy-fail.exec  assert-lazy-fail.stderr  assert-lazy.ecl  assert-lazy.exec  assert-lazy.stdout  assert-le.ecl  assert-le.exec  assert-le.stderr  assert-lt-cmp-error.ecl  assert-lt-cmp-error.exec  assert-lt-cmp-error.stderr  assert-lt.ecl  assert-lt.exec  assert-lt.stderr  assert-ne.ecl  assert-ne.exec  assert-ne.stderr  assert-nil.ecl  assert-nil.exec  assert-nil.stderr  assert-pass.ecl  assert-pass.exec  assert-pass.stdout  (+14 more)
tests/lines/: _data.ecl  addition.decompiled  addition.ecl  addition.lines  adict-overrides.decompiled  adict-overrides.ecl  adict-overrides.lines  auto-dict.decompiled  auto-dict.ecl  auto-dict.lines  bool.decompiled  bool.ecl  bool.lines  builtins.decompiled  builtins.ecl  builtins.lines  cached.decompiled  cached.ecl  cached.lines  comments.ecl  (+58 more)
(+1 files in other folders)
