[package]
authors = ["Kevin Cox <kevincox@kevincox.ca>"]
name = "ecl"
version = "0.1.0"
[dependencies]
byteorder = "1.2.1"
clap = "2.25.1"
erased-serde = "0.1"
gc_derive = "0.3"
iota = "0.1.4"
lazy_static = "0.2"
regex = "0.1"
serde = "0.8"
serde_json = "0.8"
serde_yaml = "0.5"

[dependencies.gc]
features = ["nightly"]
version = "0.3"

[dev-dependencies]
difference = "1.0"
serde_derive = "0.8"
humanbool = "1.0"
